# DEIMv2

./: CLAUDE.md  main.py  pyproject.toml
configs/: runtime.yml
configs/dataset/: wildlife_detection.yml
configs/deimv2/: deimv2_dinov3_m_wildlife.yml  deimv2_dinov3_s_wildlife.yml  deimv2_dinov3_ss_wildlife.yml  deimv2_hgnetv2_atto_wildlife.yml
engine/backbone/: dinov3_adapter.py
engine/core/: _config.py
engine/data/transforms/: _transforms.py
engine/misc/: __init__.py  metrics.py
engine/optim/: lr_scheduler.py
engine/solver/: _solver.py  det_engine.py  det_solver.py
