[project]
name = "deimv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "calflops>=0.3.2",
    "faster-coco-eval>=1.6.8",
    "matplotlib>=3.10.6",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "wandb>=0.22.1",
]
